Fix internship payment schedule now that feedback #4 code is in place

--- a/home/templates/home/snippet/payment_schedule.html
+++ b/home/templates/home/snippet/payment_schedule.html
@@ -3,8 +3,8 @@
 	<tr><th>{{ current_round.initialfeedback }}</th><td>Feedback #1 due</td></tr>
 	<tr><th>{{ current_round.midfeedback }} </th><td>Feedback #2 due</td></tr>
 	<tr><th>{{ current_round.initial_stipend_payment_deadline }}</th><td>${{ current_round.initialpayment }} stipend will be issued to interns with successful feedback #1</td></tr>
-	<tr><th>{{ current_round.finalfeedback }} </th><td>Feedback #3 feedback due</td></tr>
-	<tr><th>TBD </th><td>Feedback #4 feedback due</td></tr>
+	<tr><th>{{ current_round.feedback3_due }} </th><td>Feedback #3 feedback due</td></tr>
 	<tr><th>{{ current_round.final_stipend_payment_deadline }}</th><td>${{ current_round.finalpayment }} stipend will be issued to interns with successful feedback #3</td></tr>
+	<tr><th>{{ current_round.finalfeedback }} </th><td>Feedback #4 feedback due</td></tr>
 	<tr><th>{{ current_round.internends }}</th><td>Internships end</td></tr>
 </table>
