Update Outreachy contact page
 - Add Anna and Omotola, along with their Outreachy titles
 - Add Karen and Sage's titles
 - Update Tony's employer
 - Move Tony into the new Outreachy Leadership Committee section
 - Move Marina into a new "Founder" section

--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -20,28 +20,63 @@ Contact Outreachy
 <div class="container">
 	<div class="row">
 		<div class="col-sm">
-			<img src="{% static 'organizers/karen.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Karen" height="200" width="200">
-			<p>Karen Sandler is the Executive Director of the Software Freedom Conservancy. Karen uses she/her pronouns.</p>
+			<img src="{% static 'organizers/anna.png' %}" class="img-thumbnail float-top mr-3" alt="Photo of Anna" height="200" width="200">
+			<p>Anna e só is the Outreachy information and process architect. Anna uses they/them pronouns in English, and -/ela/a in Portuguese.</p>
 		</div>
 		<div class="col-sm">
-			<img src="{% static 'organizers/tony.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Tony is CC BY-SA 4.0 by Myleen Hollero - Myleen Hollero Photography" height="200" width="200">
-			<p>Tony Sebro is Deputy General Counsel for the Wikimedia Foundation. Tony uses he/him pronouns.</p><i>Photo of Tony is CC BY-SA 4.0 by Myleen Hollero - Myleen Hollero Photography.</i></p>
+			<img src="{% static 'organizers/karen.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Karen" height="200" width="200">
+			<p>Karen Sandler is the Outreachy grants and sponsorship lead. Karen Sandler is also the Executive Director of <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Karen uses she/her pronouns.</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-sm">
-			<img src="{% static 'organizers/sage.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
-			<p>Sage Sharp is a diversity and inclusion consultant, and founder of Otter Tech. Sage uses they/them pronouns.</p>
+			<img src="{% static 'organizers/Omotola-square.png' %}" class="img-thumbnail float-top mr-3" alt="Photo of Omotola" height="200" width="200">
+			<p>Omotola Omotoya is the Outreachy community manager. Omotola is also Community Manager Lead at <a href="https://shecodeafrica.org/">She Code Africa</a>.</p>
 		</div>
 		<div class="col-sm">
-			<img src="{% static 'organizers/marina.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
-			<p>Marina Zhurakhinskaya is a Senior Outreach Specialist in Community Diversity and Inclusion at Red Hat. Marina uses she/her pronouns.</p>
+			<img src="{% static 'organizers/sage.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
+			<p>Sage Sharp is the Outreachy cultural change agent. Sage is also the Senior Director of Diversity and Inclusion at <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Sage is CEO of <a href="https://www.otter.technology">Otter Tech</a>. Sage uses they/them pronouns.</p>
 		</div>
 	</div>
 </div>
 
 
+<h2>Outreachy Leadership Committee</h2>
 
+<div class="container">
+	<div class="row">
+		<div class="col-sm">
+			<img src="{% static 'organizers/karen.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Karen" height="200" width="200">
+			<p>Karen Sandler is the Outreachy grants and sponsorship lead. Karen Sandler is also the Executive Director of <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Karen uses she/her pronouns.</p>
+		</div>
+		<div class="col-sm">
+			<img src="{% static 'organizers/tony.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Tony is CC BY-SA 4.0 by Myleen Hollero - Myleen Hollero Photography" height="200" width="200">
+			<p>Tony Sebro is General Counsel for <a href="https://www.change.org/">Change.org</a>. Tony uses he/him pronouns.</p><i>Photo of Tony is CC BY-SA 4.0 by Myleen Hollero - Myleen Hollero Photography.</i></p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm">
+			<img src="{% static 'organizers/sage.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
+			<p>Sage Sharp is the Outreachy cultural change agent. Sage is also the Senior Director of Diversity and Inclusion at <a href="https://www.sfconservancy.org">Software Freedom Conservancy</a>. Sage is CEO of <a href="https://www.otter.technology">Otter Tech</a>. Sage uses they/them pronouns.</p>
+		</div>
+		<div class="col-sm">
+		</div>
+	</div>
+</div>
 
+<h2>Outreachy Founder</h2>
+
+<p>We honor Marina Zhurakhinsakaya, the founder of Outreachy, who passed on June 11, 2022.</p>
+
+<div class="container">
+	<div class="row">
+		<div class="col-sm">
+			<img src="{% static 'organizers/marina.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
+			<p>Marina Zhurakhinskaya was a Senior Outreach Specialist in Community Diversity and Inclusion at Red Hat. Marina used she/her pronouns.</p>
+		</div>
+		<div class="col-sm">
+		</div>
+	</div>
+</div>
 
 {% endblock %}
