Fix Marina's remembrance blog post title
Typo: Zhurakhinsakaya ➡️ Zhurakhinskaya

--- a/home/templates/home/blog/2022-06-14-remembering-and-honoring-marina.html
+++ b/home/templates/home/blog/2022-06-14-remembering-and-honoring-marina.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block title %}
-Remembering and Honoring Marina Zhurakhinsakaya, Founder of Outreachy
+Remembering and Honoring Marina Zhurakhinskaya, Founder of Outreachy
 {% endblock %}
 
 {% block content %}
 {% load humanize %}
 
 
-<h1>Remembering and Honoring Marina Zhurakhinsakaya, Founder of Outreachy</h1>
+<h1>Remembering and Honoring Marina Zhurakhinskaya, Founder of Outreachy</h1>
 
 <p><i>Date: June 14, 2022</i></p>
 {% comment %}<p><i>Last updated: DATE</i> - See the "SECTION" section below.</p>{% endcomment %}
