Fix Omotola's last name, add her pronouns

--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -31,7 +31,7 @@ Contact Outreachy
 	<div class="row">
 		<div class="col-sm">
 			<img src="{% static 'organizers/Omotola-square.png' %}" class="img-thumbnail float-top mr-3" alt="Photo of Omotola" height="200" width="200">
-			<p>Omotola Omotoya is the Outreachy community manager. Omotola is also Community Manager Lead at <a href="https://shecodeafrica.org/">She Code Africa</a>.</p>
+			<p>Omotola Omotayo is the Outreachy community manager. Omotola is also Community Manager Lead at <a href="https://shecodeafrica.org/">She Code Africa</a>. Omotola uses she/her pronouns.</p>
 		</div>
 		<div class="col-sm">
 			<img src="{% static 'organizers/sage.jpg' %}" class="img-thumbnail float-top mr-3" alt="Photo of Sage" height="200" width="200">
