Correct typo in Marina's last name.
Marina was so detail-oriented. I'm sure she's smiling about us making
last-minute changes to correct typos and the number of interns who
successfully completed Outreachy.

--- a/home/templates/home/blog/2022-06-14-remembering-and-honoring-marina.html
+++ b/home/templates/home/blog/2022-06-14-remembering-and-honoring-marina.html
@@ -12,7 +12,7 @@ Remembering and Honoring Marina Zhurakhinskaya, Founder of Outreachy
 <h1>Remembering and Honoring Marina Zhurakhinskaya, Founder of Outreachy</h1>
 
 <p><i>Date: June 14, 2022</i></p>
-{% comment %}<p><i>Last updated: DATE</i> - See the "SECTION" section below.</p>{% endcomment %}
+<p><i>Last updated: June 14, 2022</i> - corrected typos.</p>
 
 <p>It is with great sadness that we write about the death of one of the most significant contributors to Free and Open Source Software, Marina Zhurakhinskaya. Marina was a force for change and leaves a profound legacy of diversity, inclusion, equity and justice. It is impossible to imagine what Software Freedom Conservancy and Outreachy would be like without Marina.</p>
 
