--- a/contacts/templates/contact_form/contact.html
+++ b/contacts/templates/contact_form/contact.html
@@ -66,7 +66,7 @@ Contact Outreachy
 
 <h2>Outreachy Founder</h2>
 
-<p>We honor Marina Zhurakhinsakaya, the founder of Outreachy, who passed on June 11, 2022.</p>
+<p>We honor Marina Zhurakhinskaya, the founder of Outreachy, who passed on June 11, 2022.</p>
 
 <div class="container">
 	<div class="row">
