Informal chat contacts: ask for topics, tools, and programming languages
When an intern is interested in learning about a career, they often ask
us, "I want to talk to someone who became a Ruby developer". Our current
roles-based questions may not capture what tools or programming
languages people use in their roles. Add this as a new field.

There are also people who write more detailed things about what they
want to talk to interns about, e.g. "I'm an academic researcher at X
university, and I would love to talk to people interested in academic
research." Add a chat topics field.

--- a/home/templates/home/informal_chat_contacts.html
+++ b/home/templates/home/informal_chat_contacts.html
@@ -37,6 +37,9 @@ Informal Chat Contacts
 								{% if contact.comrade.pronouns_to_participants %}
 									<BR><b>Pronouns:</b> {{ contact.comrade.get_pronouns_html|safe }}
 								{% endif %}
+								{% if contact.topics %}
+									<BR><b>I'm excited to talk to you about:</b> {{ contact.topics }}
+								{% endif %}
 								{% if contact.relationship_to_outreachy %}
 									<BR><b>Relation to Outreachy:</b> {{ contact.relationship_to_outreachy }}
 								{% endif %}
@@ -53,6 +56,9 @@ Informal Chat Contacts
 								{% endif %}
 								{% if contact.paid_foss_roles %}
 									<BR><b>Paid open source roles:</b> {{ contact.paid_foss_roles }}
+								{% endif %}
+								{% if contact.tools_used %}
+									<BR><b>Tools and programming languages:</b> {{ contact.tools_used }}
 								{% endif %}
 							</div>
 						</div>
