--- a/home/templates/home/dashboard/staff_subscriptions.html
+++ b/home/templates/home/dashboard/staff_subscriptions.html
@@ -26,3 +26,7 @@ You'll also need to subscribe volunteers to the Zulip chat manually.
 <a href="{% url 'active-internship-contacts' %}">See the active internship email contacts list.</a>
 </p>
 
+<h1>Informal chat contacts</h1>
+<p>
+<a href="{% url 'informal-chat-contacts' %}">See the information of people who volunteered for informal chats with interns.</a>
+</p>
