--- a/home/templates/home/informal_chat_contacts.html
+++ b/home/templates/home/informal_chat_contacts.html
@@ -37,11 +37,14 @@ Informal Chat Contacts
 								{% if contact.comrade.pronouns_to_participants %}
 									<BR><b>Pronouns:</b> {{ contact.comrade.get_pronouns_html|safe }}
 								{% endif %}
+								{% if contact.tools_used %}
+									<BR><BR><b>Tools and programming languages:</b> {{ contact.tools_used }}
+								{% endif %}
 								{% if contact.topics %}
-									<BR><b>I'm excited to talk to you about:</b> {{ contact.topics }}
+									<BR><BR><b>I'm excited to talk to you about:</b> {{ contact.topics }}
 								{% endif %}
 								{% if contact.relationship_to_outreachy %}
-									<BR><b>Relation to Outreachy:</b> {{ contact.relationship_to_outreachy }}
+									<BR><BR><b>Relation to Outreachy:</b> {{ contact.relationship_to_outreachy }}
 								{% endif %}
 								{% if contact.foss_communities %}
 									<BR><BR><b>Open source communities:</b> {{ contact.foss_communities }}
@@ -56,9 +59,6 @@ Informal Chat Contacts
 								{% endif %}
 								{% if contact.paid_foss_roles %}
 									<BR><b>Paid open source roles:</b> {{ contact.paid_foss_roles }}
-								{% endif %}
-								{% if contact.tools_used %}
-									<BR><b>Tools and programming languages:</b> {{ contact.tools_used }}
 								{% endif %}
 							</div>
 						</div>
