Alums page: display the skills interns learns through their projects
Many sponsors want to know "did any Outreachy interns work on C
projects". They might want to hire those interns. Display the project
skills mentors listed for the project the intern worked on. These might
be slightly off as projects are re-defined, but should give a good first
pass.

--- a/home/templates/home/alums_roundpage.html
+++ b/home/templates/home/alums_roundpage.html
@@ -75,6 +75,7 @@ Outreachy Alums, {{ round.internstarts|date:"F Y" }} to {{ round.internends|date
 			{% endif %}
 			<BR>{{ i.project.project_round.community }} mentor(s): {{ i.mentor_names }}
 			<BR>Project: {{ i.project.short_title }}
+			<BR>Project skills: {% for project_skill in i.project.all_skills %}{{ project_skill.skill }}{% if not forloop.last %}, {% endif %}{% endfor %}
 		</div>
 	</div>
 	</div>
