Remove redundant information from active internship contacts list
Only show the names of interns, and link to their full internship
information on another page.

--- a/home/templates/home/active_internship_contacts.html
+++ b/home/templates/home/active_internship_contacts.html
@@ -20,35 +20,11 @@ Active Internships Email Contacts
 {{ comrade.email_address }}{% endfor %}</textarea>
 </p>
 
-<h1>Internship Contact List</h1>
+<h1>Active Internships</h1>
 
 {% for intern in interns %}
-{% ifchanged %}<h2>{{ intern.project.project_round.participating_round.official_name }}</h2>{% endifchanged %}
-<hr>
-<p>Community: {{ intern.project.project_round.community }}<br>
-Project: "{{ intern.project.short_title }}"<br>
-{% if not intern.intern_contract %}
-	<span class="badge badge-pill badge-warning">Internship agreement not signed</span><br>
-{% endif %}
-{% if not intern.in_good_standing %}
-	<span class="badge badge-pill badge-warning">Internship terminated</span>
-{% elif not intern.intern_has_custom_dates %}
-	Standard internship dates
-{% else %}
-	Internship start date: {{ intern.intern_starts }}<br>
-	Initial feedback opens: {{ intern.initial_feedback_opens }}<br>
-	Initial feedback due: {{ intern.initial_feedback_due }}<br>
-	Mid-point feedback opens: {{ intern.midpoint_feedback_opens }}<br>
-	Mid-point feedback due: {{ intern.midpoint_feedback_due }}<br>
-	Final feedback opens: {{ intern.final_feedback_opens }}<br>
-	Final feedback due: {{ intern.final_feedback_due }}<br>
-	Internship end date: {{ intern.intern_ends }}
-{% endif %}</p>
-<p>Intern pronouns to use in emails to mentors and coordinators: {% if intern.applicant.applicant.pronouns_to_participants or intern.applicant.applicant.pronouns_public %}{{ intern.applicant.applicant.get_pronouns_html|safe }}{% else %}<a href='http://pronoun.is/they'>they/them/theirs</a>{% endif %}
-<br>Intern pronouns to use publicly: {% if intern.applicant.applicant.pronouns_public %}{{ intern.applicant.applicant.get_pronouns_html|safe }}{% else %}<a href='http://pronoun.is/they'>they/them/theirs</a>{% endif %}
-<br>Intern: {{ intern.applicant.applicant.email_address }},</p>
-<p>Mentors: {% for email in intern.mentor_emails %}{{ email }}, {% endfor %}<br>
-Coordinators: {% for email in intern.project.project_round.community.get_coordinator_email_list %}{{ email }}, {% endfor %}</p>
+	{% ifchanged %}<h2>{{ intern.project.project_round.participating_round.internstarts|date:"F Y" }} cohort</h2><hr>{% endifchanged %}
+	<p><a href="{% url 'review-interns' round_slug=intern.project.project_round.participating_round.slug %}#intern-{{ intern.applicant.applicant.account.pk }}">{{ intern.applicant.applicant.public_name }}</a></p>
 {% endfor %}
 
 {% endblock %}
