Fix missing link to community documentation funding section

--- a/home/templates/home/preview/participation_action.html
+++ b/home/templates/home/preview/participation_action.html
@@ -16,7 +16,7 @@ Intern Funding
 
 <h1>Intern Funding</h1>
 
-<p>Please <a href="">read the community guide</a> for more information about intern funding.</p>
+<p>Please <a href="{% url 'docs-community' %}#funding-requirements">read the community guide</a> for more information about intern funding.</p>
 
 <p>Sponsorship for one intern is $6,500 USD. Please list the dollar amount in the form below, not the number of interns.</p>
 
